FIX: nav menu on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,17 @@ header{
 .btn-primary{
     @apply px-7 py-2 bg-brandPrimary text-white rounded hover:bg-neutralGrey transition-all duration-300 hover:-translate-y-4
 }
+
+.nav-item::after{
+    content: "";
+    display: block;
+    height: 2px;
+    width: 100%;
+    background-color: white;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.3s ease;
+}
+.nav-item:hover::after{
+    transform: scaleX(1);
+}
